<resources>
    <string name="app_name">AntiForensics Tools</string>
    <string name="enable_logs">Enable logging</string>
  <string name="select_day">Open logs for day</string>
  <string name="change_timeout">Change timeout</string>
  <string name="clear_logs">Clear logs</string>
  <string name="help">Help</string>
  <string name="log">Logs</string>
  <string name="delete">Delete</string>
  <string name="edit_text">Edit</string>
  <string name="show_more">Show more</string>
  <string name="file_photo_description">File icon</string>
  <string name="fab_text">Add file/folder</string>
  <string name="add_file">Add file</string>
  <string name="add_folder">Add folder</string>
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>
  <string name="theme">Select theme</string>
  <string name="enable_files_deletion">Enable deletion</string>
  <string name="maxpr">Priority: largest first</string>
  <string name="minpr">Priority: smallest first</string>
  <string name="alphabet">Alphabetical order</string>
  <string name="disalphabet">Reverse alphabetical order</string>
  <string name="sizebig">Size: largest first</string>
  <string name="sizesmall">Size: smallest first</string>
  <string name="change_password">Change password</string>
  <string name="clear">Clear list</string>
  <string name="settings">Settings</string>
  <string name="about">About app</string>
  <string name="file_deletion_settings">Files deletion settings</string>
  <string name="wrong_password">Wrong password</string>
  <string name="create_password">Create password</string>
  <string name="enter_password">Enter password</string>
  <string name="app_entered">Someone entered app</string>
  <string name="priority">Priority: %1$d</string>
  <string name="empty_value_in_dialog">Empty value</string>
  <string name="number_out_of_range">Number out of range</string>
  <string name="short_password">Password too short</string>
  <string name="changePriority">Change file priority</string>
  <string name="file">File: %1$s</string>
  <string name="fileDetails"><![CDATA[<p>Name: %1$s</p><p>Priority: %2$s</p><p>Size: %3$s</p>]]></string>
  <string name="about_file_title">About file</string>
  <string name="apply">Confirm your action</string>
  <string name="want_to_clear">You want to clear all list of files</string>
  <string name="file_removal_unsuccessfull">File is not removed</string>
  <string name="folder_removal_unsuccessful">Folder not removed</string>
  <string name="long_help_files"><![CDATA[<p>You can select files that would be deleted after entering fake password here. In this menu you can choose only files which don\'t <strong>require root rights to be deleted</strong>.</p>\n<p>To add new file or folder, tap button <strong>+.&nbsp;</strong></p>\n<p>You can delete file from list, clear list of files or edit file\'s priority. Files with higher priority are deleted first.</p>]]></string>
  <string name="select_date">Select day</string>
  <string name="disable_logs">Disable logging</string>
  <string name="clear_logs_question">Do you want to clear logs?</string>
  <string name="logs_clear_warning">Logs for day %1$s would be cleared.</string>
  <string name="logs_help">"You can read logs here if they are enabled. You can find out when application was unlocked and what files were deleted. Logs are deleting automatically after 7 days, but you can change this behaviour. "</string>
  <string name="enter_timeout_logs">Enter timeout for logs autodeletion (in days)</string>
  <string name="timeout_logs_long">Logs older than n days would be cleared to free space.</string>
  <string name="enable_logs_long"><![CDATA[Do you really want to enable logging? If adversary would get access to application password he can get data about deleted files. <strong>It is highly recommended to enable logs only for application testing.</strong>]]></string>
  <string name="disable_logs_long">Do you want to disable logging?</string>
  <string name="about_long"><![CDATA[SyrenaPass is an app for creating duress password that can clear data selected by user when typed. It\'s similar to <a href="https://github.com/x13a/Wasted">Wasted</a> app and (for now) this is a companion app for <a href="https://github.com/x13a/Duress">Duress</a>, but it deletes only data previously selected by user instead of wiping phone completely, making data deletion seamless for advisory. To set up this app you need to choose files that should be deleted, then activate files deletion and set up Duress app. Enter following parameters in Duress:<p>action: com.android.aftools.action.TRIGGER</p><p>receiver: com.android.aftools/.presentation.services.DuressListener</p><p>key: password</p><p>value: <strong>your password from this app</strong><p>You can also enable logs and test app on some mock data.</p>]]></string>
  <string name="entertext">Enter text here</string>
  <string name="disable_files_deletion">Disable deletion</string>
  <string name="system_theme">System theme</string>
  <string name="dark_theme">Dark theme</string>
  <string name="light_theme">Light theme</string>
  <string name="do_you_want_to_enable_deletion">Do you want ot enable deletion?</string>
  <string name="enable_deletion_long"><![CDATA[<p>If you enter duress password, selected files would be deleted.</p>\n<p><strong>Important: files deletion doesn\'t work in BFU mode. If you enter duress password in BFU mode, files deletion will be launched after phone unlocking. If you set up app to destroy itself, it will destroy itself only when all files will be deleted. That\'s why it\'s recommended to avoid using this mode and delete profile with your secret files instead if you can grant app enough privileges.</strong></p>]]></string>
  <string name="enter_password_long">Enter your new password. It should not be shorter than 8 characters.</string>
  <string name="about_settings">Settings</string>
  <string name="settings_faq"><![CDATA[<p>You can set new password or select app theme there. If you enable deletion, all selected files would be deleted if you had entered your duress password.</p>\n<p> To create duress password, download app <a href="https://github.com/x13a/Duress">Duress</a>, install it, set up and enter following parameters:<p>action: com.android.aftools.action.TRIGGER</p><p>receiver: com.android.aftools/.presentation.services.DuressListener</p><p>key: password</p><p>value: <strong>your password from this app</strong></p>]]></string>
  <string name="deletion_started">Files deletion started</string>
  <string name="deletion_folder">Folder %1$s is deleting</string>
  <string name="deletion_file">File %1$s is deleting</string>
  <string name="access_error">File inaccessible</string>
  <string name="folder_deletion_error">Error %2$s while deleting folder %1$s</string>
  <string name="file_deletion_error">Error %2$s while deleting file %1$s</string>
  <string name="folder_deletion_success">Folder %1$s deleted: %2$s percents of files removed</string>
  <string name="folder_deletion_failed">Folder %1$s is not deleted: %2$s percents of files deleted.</string>
  <string name="deletion_success">File %1$s deleted</string>
  <string name="deletion_failed">File %1$s is not deleted</string>
  <string name="access_denied">You denied access to files, it may cause some bugs.</string>
  <string name="logo_background">Background of logotype</string>
  <string name="prominent_disclosure_message">The app uses accessibility service to listen for a duress password on the lockscreen and listen for usb connections.</string>
  <string name="start_accessibility_service">Start accessibility service</string>
  <string name="grant_admin_rights">Grant admin rights</string>
  <string name="stop_accessibility_service">Stop accessibility service</string>
  <string name="revoke_admin_rights">Revoke admin rights</string>
  <string name="accessibility_service_long"><![CDATA[This app requires accessibility service to read your password input and recognise duress password and to receive usb connection events. Click \"ok\" and go to \"Installed Services>Android AntiForensics Tools\" if you want to enable/disable accessibility service.]]></string>
  <string name="accessibility_service_title">Open accessibility service settings</string>
  <string name="admin_settings_title">Open admin settings</string>
  <string name="admin_settings_long"><![CDATA[<p>This application needs admin rights to be able to:</p><ul><li>Wipe device data</li><li>Observe wrong password attempts</li></ul><p>Press "ok" and then press "Activate" to grant this application admin rights.</p>]]></string>
  <string name="device_admin_error">Device admin rights are not enough to perform operations.</string>
  <string name="no_admin_rights">App doesn\'t have admin rights.</string>
  <string name="unknow_admin_error">Device admin action failed for some reason: %1$s</string>
  <string name="unknow_owner_error">Device owner action failed for some reason: %1$s</string>
  <string name="unknow_root_error">Root action failed for some reason: %1$s</string>
  <string name="wrong_android_version">Wrong android version, SDK version %1$s or higher required</string>
  <string name="no_root_rights">App doesn\'t have root rights</string>
  <string name="no_superuser_rights">You don\'t have superuser rights</string>
    <string name="deletion_completed">File deletion completed</string>
    <string name="general_settings">General settings</string>
    <string name="actions_settings">Superuser actions settings</string>
    <string name="run_trim">Run TRIM</string>
  <string name="wipe_data">Wipe data</string>
  <string name="remove_itself">Remove itself</string>
  <string name="root_only">Requires root</string>
  <string name="all_superusers">Requires any superuser</string>
  <string name="root_and_owner">Requires root or dhizuku</string>
  <string name="permissions">Permissions settings</string>
  <string name="admin_rights">Admin rights</string>
  <string name="device_owner">Dhizuku</string>
  <string name="root">Root rights</string>
  <string name="usb_settings">USB settings</string>
  <string name="run_on_connection">Run on connection</string>
  <string name="accessibility_service_required">Requires accessibility service</string>
  <string name="bruteforce_defense">Bruteforce defense</string>
  <string name="prevent_bruteforce">Prevent bruteforce</string>
  <string name="accessibility_service">Accessibility service</string>
  <string name="allowed_attempts">Allowed wrong attempts</string>
  <string name="password_attempts_number">Select maximum number of wrong password attemps before clearing the data. Default: 10</string>
  <string name="getting_data_error">Error while loading data: %1$s</string>
  <string name="got_data">Loaded data</string>
  <string name="actions_started">Data deletion started</string>
  <string name="wiping_data">Wiping data on device</string>
  <string name="wiping_data_error">Error while wiping device data: %1$s</string>
    <string name="getting_profiles">Getting profiles data</string>
    <string name="loading_data">Loading data and getting superuser</string>
    <string name="getting_profiles_failed">Getting profiles data failed</string>
  <string name="data_wiped">Data wiped</string>
  <string name="removing_profile">Removing profile %1$s</string>
  <string name="profile_removed">Profile removed</string>
  <string name="profile_not_removed">Profile not removed: %1$s</string>
  <string name="uninstalling_app">Uninstalling app %1$s</string>
  <string name="app_uninstalled">App uninstalled</string>
  <string name="app_not_uninstalled">App uninstallation failed: %1$s</string>
  <string name="clearing_app_data">Clearing data for app %1$s</string>
  <string name="app_data_cleared">App data cleared</string>
  <string name="app_data_not_cleared">Failed to clear app data: %1$s</string>
  <string name="hiding_app">Hiding app %1$s</string>
  <string name="app_hidden">App hidden</string>
</resources>